--- a/index.html
+++ b/index.html
@@ -319,11 +319,11 @@
     <div class="container">
         <!-- Telegram Contact Header -->
         <div class="contact-header">
-            <div>📡 Instagram Network Report</div>
+            <div>RICO WATCH 🚬</div>
             <div>Contact: <a href="https://t.me/nugpuller" target="_blank">@nugpuller</a></div>
         </div>
 
-        <h1>Instagram Network Report</h1>
+        <h1>OVHOE NETWORK</h1>
         
         <input type="text" id="searchBox" class="search-box" placeholder="[SEARCH USERS...]">
         
@@ -575,3 +575,4 @@
     </script>
 </body>
 </html>
+
