--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
         <div class="controls">
             <div class="control-group">
                 <label>Filter by Specific Followers (comma separated)</label>
-                <input type="text" id="followerFilter" class="filter-input" placeholder="e.g., champagnepapi, certifiedjared">
+                <input type="text" id="followerFilter" class="filter-input" placeholder="e.g., champagnepapi,zackbia">
             </div>
         </div>
 
@@ -575,5 +575,6 @@
     </script>
 </body>
 </html>
+
 
 
